--- a/AdaptiveSun/AdaptiveSun/Base.lproj/Main.storyboard
+++ b/AdaptiveSun/AdaptiveSun/Base.lproj/Main.storyboard
@@ -1,26 +1,101 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdaptiveSun" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="myq-kr-R6Y">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zlJ-ZH-xaX">
+                                <rect key="frame" x="0.0" y="368" width="414" height="368"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T74-tf-Bc1" userLabel="TextView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="1L5-su-65t">
+                                                <rect key="frame" x="8" y="8" width="398" height="168"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="400"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="1L5-su-65t" firstAttribute="leading" secondItem="T74-tf-Bc1" secondAttribute="leading" constant="8" id="9yN-W4-rFU"/>
+                                            <constraint firstAttribute="bottom" secondItem="1L5-su-65t" secondAttribute="bottom" constant="8" id="MEb-Uy-gzU"/>
+                                            <constraint firstItem="1L5-su-65t" firstAttribute="top" secondItem="T74-tf-Bc1" secondAttribute="top" constant="8" id="vH8-o5-8ho"/>
+                                            <constraint firstAttribute="trailing" secondItem="1L5-su-65t" secondAttribute="trailing" constant="8" id="zsU-c9-xzu"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="T74-tf-Bc1" firstAttribute="height" secondItem="zlJ-ZH-xaX" secondAttribute="height" multiplier="1/2" id="9n5-Zh-V5D"/>
+                                    <constraint firstAttribute="trailing" secondItem="T74-tf-Bc1" secondAttribute="trailing" id="ZYN-bj-HP0"/>
+                                    <constraint firstItem="T74-tf-Bc1" firstAttribute="top" secondItem="zlJ-ZH-xaX" secondAttribute="top" id="nKe-Nj-2D1"/>
+                                    <constraint firstItem="T74-tf-Bc1" firstAttribute="leading" secondItem="zlJ-ZH-xaX" secondAttribute="leading" id="yIW-Kp-kyK"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ylr-j9-HHp" userLabel="Dummy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="368"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="Emj-i8-wzb">
+                                        <rect key="frame" x="78.333333333333343" y="55.333333333333343" width="257.33333333333326" height="257.33333333333326"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Emj-i8-wzb" secondAttribute="height" multiplier="1:1" id="z0N-Lk-vNQ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Emj-i8-wzb" firstAttribute="centerX" secondItem="Ylr-j9-HHp" secondAttribute="centerX" id="5DE-is-5oA"/>
+                                    <constraint firstItem="Emj-i8-wzb" firstAttribute="centerY" secondItem="Ylr-j9-HHp" secondAttribute="centerY" id="fmw-37-7xX"/>
+                                    <constraint firstItem="Emj-i8-wzb" firstAttribute="height" secondItem="Ylr-j9-HHp" secondAttribute="height" multiplier="0.7" id="zK3-hS-bZo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zlJ-ZH-xaX" secondAttribute="trailing" id="DiY-Kf-x1d"/>
+                            <constraint firstItem="myq-kr-R6Y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JdJ-Q7-bco"/>
+                            <constraint firstAttribute="trailing" secondItem="Ylr-j9-HHp" secondAttribute="trailing" id="MZH-1y-fKU"/>
+                            <constraint firstItem="zlJ-ZH-xaX" firstAttribute="height" secondItem="myq-kr-R6Y" secondAttribute="height" multiplier="1/2" id="OB9-k8-E5D"/>
+                            <constraint firstItem="Ylr-j9-HHp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Yhu-qp-fLS"/>
+                            <constraint firstAttribute="trailing" secondItem="myq-kr-R6Y" secondAttribute="trailing" id="Yof-XD-P4w"/>
+                            <constraint firstItem="myq-kr-R6Y" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gzt-q9-4Wv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zlJ-ZH-xaX" secondAttribute="bottom" id="hRi-Tt-TLI"/>
+                            <constraint firstItem="zlJ-ZH-xaX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jTv-Lw-uin"/>
+                            <constraint firstItem="Ylr-j9-HHp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="juq-s4-lJZ"/>
+                            <constraint firstItem="Ylr-j9-HHp" firstAttribute="height" secondItem="myq-kr-R6Y" secondAttribute="height" multiplier="1/2" id="tME-00-g4p"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="myq-kr-R6Y" secondAttribute="bottom" id="yUB-cs-tbW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="136.95652173913044"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Sun" width="518" height="505"/>
+        <image name="background" width="1280" height="480"/>
+    </resources>
 </document>
